# bignum

./: LICENSE  pyproject.toml  readme.md
bignum/: __init__.py  big.py
